[gd_scene load_steps=5 format=3 uid="uid://bay3wwgohaw8c"]

[ext_resource type="Script" path="res://addons/Polybar/sample/control.gd" id="1_m3d5n"]
[ext_resource type="Script" path="res://addons/Polybar/PolyBarClass.gd" id="2_lhtok"]
[ext_resource type="PackedScene" uid="uid://c7dkxk8h1516" path="res://addons/Polybar/custom_scn/line.tscn" id="3_lq423"]
[ext_resource type="PackedScene" uid="uid://nt0y7cfirsjf" path="res://addons/Polybar/custom_scn/label.tscn" id="4_e7opm"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m3d5n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -33.0
offset_right = 18.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="value" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="value_down" type="Button" parent="VBoxContainer/value"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "-"

[node name="value_up" type="Button" parent="VBoxContainer/value"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "+"

[node name="Label" type="Label" parent="VBoxContainer/value"]
layout_mode = 2
text = "Value"

[node name="max_value" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="max_value_down" type="Button" parent="VBoxContainer/max_value"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "-"

[node name="max_value_up" type="Button" parent="VBoxContainer/max_value"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "+"

[node name="Label" type="Label" parent="VBoxContainer/max_value"]
layout_mode = 2
text = "MaxValue"

[node name="PolyBarClass" type="Node2D" parent="."]
position = Vector2(559, 407)
scale = Vector2(2, 2)
script = ExtResource("2_lhtok")
colors = Array[Color]([Color(1, 0.301961, 0.301961, 1), Color(0.34902, 0.176471, 0.176471, 1), Color(0.501961, 0.14902, 0.14902, 0.196078), Color(0.34902, 0.176471, 0.176471, 0.196078)])

[node name="@Polygon2D@21871" type="Polygon2D" parent="PolyBarClass"]
color = Color(0.501961, 0.14902, 0.14902, 0.196078)
polygon = PackedVector2Array(-104, -4, -104, 4, 104, 4, 104, -4, -104, -4)

[node name="Line" type="Line2D" parent="PolyBarClass" instance=ExtResource("3_lq423")]
points = PackedVector2Array(-104, -4, -104, 4, 104, 4, 104, -4, -104, -4)
width = 1.8
default_color = Color(0.34902, 0.176471, 0.176471, 0.196078)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="@Polygon2D@21872" type="Polygon2D" parent="PolyBarClass"]
color = Color(1, 0.301961, 0.301961, 1)
polygon = PackedVector2Array(-54, -4, -54, 4, 54, 4, 54, -4, -54, -4)

[node name="@Line2D@21873" type="Line2D" parent="PolyBarClass" instance=ExtResource("3_lq423")]
points = PackedVector2Array(-54, -4, -54, 4, 54, 4, 54, -4, -54, -4)
width = 1.8
default_color = Color(0.34902, 0.176471, 0.176471, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Label" type="Label" parent="PolyBarClass" instance=ExtResource("4_e7opm")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.5
offset_top = -4.0
offset_right = 14.5
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 5
text = "HP 50 / 100 "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="VBoxContainer/value/value_down" to="." method="_on_value_down_button_up"]
[connection signal="button_up" from="VBoxContainer/value/value_up" to="." method="_on_value_up_button_up"]
[connection signal="button_up" from="VBoxContainer/max_value/max_value_down" to="." method="_on_max_value_down_button_up"]
[connection signal="button_up" from="VBoxContainer/max_value/max_value_up" to="." method="_on_max_value_up_button_up"]
